--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prisma:seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
     "@kinde-oss/kinde-auth-nextjs": "^2.1.10",
@@ -19,12 +20,14 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@react-email/components": "0.0.14",
     "@react-email/tailwind": "^0.0.14",
+    "ai": "^2.2.34",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.3",
     "lucide-react": "^0.323.0",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
+    "openai": "^4.27.0",
     "react": "^18",
     "react-dom": "^18",
     "react-email": "^2.0.0",
