--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-email": "^2.0.0",
     "react-intersection-observer": "^9.8.0",
     "resend": "^3.1.0",
+    "socket.io": "^4.7.4",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
