--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
     "react": "^18",
     "react-dom": "^18",
     "react-email": "^2.0.0",
+    "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.8.0",
     "react-quill": "^2.0.0",
     "resend": "^3.1.0",
     "socket.io": "^4.7.4",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.0"
   },
   "devDependencies": {
     "@types/katex": "^0.16.7",
