--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-email": "^2.0.0",
     "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.8.0",
+    "react-katex": "^3.0.1",
     "react-markdown": "^9.0.1",
     "react-quill": "^2.0.0",
     "react-syntax-highlighter": "^15.5.0",
@@ -47,6 +48,7 @@
     "rehype-katex": "^7.0.0",
     "remark-math": "^6.0.0",
     "resend": "^3.1.0",
+    "slate-react": "^0.102.0",
     "socket.io": "^4.7.4",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
