--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@kinde-oss/kinde-auth-nextjs": "^2.1.10",
+    "@mui/material": "^5.15.10",
     "@nanostores/react": "github:ai/react",
     "@prisma/client": "^5.9.1",
     "@radix-ui/react-accordion": "^1.1.2",
@@ -28,6 +31,7 @@
     "ai": "^2.2.34",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "formik": "^2.4.5",
     "framer-motion": "^11.0.3",
     "katex": "^0.16.9",
     "lucide-react": "^0.323.0",
@@ -39,6 +43,7 @@
     "react-dom": "^18",
     "react-email": "^2.0.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
     "react-intersection-observer": "^9.8.0",
     "react-katex": "^3.0.1",
     "react-markdown": "^9.0.1",
@@ -48,6 +53,7 @@
     "rehype-katex": "^7.0.0",
     "remark-math": "^6.0.0",
     "resend": "^3.1.0",
+    "slate-history": "^0.100.0",
     "slate-react": "^0.102.0",
     "socket.io": "^4.7.4",
     "tailwind-merge": "^2.2.1",
