--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@react-email/components": "0.0.14",
     "@react-email/tailwind": "^0.0.14",
+    "@vercel/analytics": "^1.2.0",
     "ai": "^2.2.34",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
