--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@react-email/components": "0.0.14",
     "@react-email/tailwind": "^0.0.14",
     "@vercel/analytics": "^1.2.0",
+    "@vercel/speed-insights": "^1.0.10",
     "ai": "^2.2.34",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
